# CS467_Capstone_Space_Invaders_Emulator

./: CMakeLists.txt  README.md  cpu.c  cpu.h  disassembler.cpp  disassembler.h  dissassembler  dissassembler.c  emulatorShell.cpp  emulator_shell.c  helperFunctions.c  helperFunctions.cpp  helperFunctions.h  ioPorts.c  ioPorts.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  makefile  maketest  runShell.c  runShell.cpp  run_shell.c
.github/workflows/: c-cpp.yml
8080_Emulator/: 8080_Emulator.pro  instructionWindow.ui  mainWindow.cpp  mainWindow.h  mainWindow.ui
8080_Emulator/roms/: README.txt
8080_Emulator/src/: instructionWindow.cpp  instructionWindow.h  main.cpp  mainWindow.cpp  res.qrc
8080_Emulator/src/cpu/: cpu.cpp  cpu.h
8080_Emulator/src/emulator/: emulator.cpp  emulator.h
8080_Emulator/src/flags/: flags.cpp  flags.h
8080_Emulator/src/gui/: gui.cpp  gui.h
build-8080_Emulator-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/: 8080_Emulator_resource.rc  Makefile  Makefile.Debug  Makefile.Release  ui_instructionWindow.h  ui_mainWindow.h
build-8080_Emulator-Desktop_Qt_5_15_2_MSVC2015_64bit-Release/release/: 8080_Emulator_resource.res  moc_cpu.cpp  moc_mainWindow.cpp
build-8080_Emulator-Desktop_Qt_5_15_2_MSVC2019_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release
build-8080_Emulator-Desktop_Qt_5_15_2_MSVC2019_32bit-Release/release/: moc_emulator.cpp  moc_gui.cpp  moc_instructionWindow.cpp  moc_mainWindow.cpp  moc_predefs.h  qrc_res.cpp
deploy_check/release/: moc_instructionWindow.cpp  moc_predefs.h  qrc_res.cpp
roms/: README.txt
src/: ioPorts.c  makefile  runShell.c
src/cpu/: 8080State.h  QCpu.cpp  QCpu.h  cpu.cpp  cpu.h  emulatorShell.c  helperFunctions.c  opcodeFunctions.C  opcodeFunctions.c  opcodeFunctions.h
src/debug/: debugFunc.c  debugFunc.h  testAsm.c
src/emulator/: disassembler.C  emulator.cpp  emulator.h  emulatorShell.C
src/flags/: flags.cpp  flags.h
src/gui/: gui.cpp  gui.h
src/machine/: ioPorts.C  ioPorts.c  ioPorts.h
